[package]
name = "practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.14.13"
thiserror = "1.0.24"
spl-token = "3.5.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
no-entrypoint = []